sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: not found: type double
      ecart=(ecart.asInstanceOf[double]/1.3).as.InstanceOf[Int]
                                ^AlgCombSort:18: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  }while(ecart>1 || inversement=true )
                 ^